--- a/.hintrc
+++ b/.hintrc
@@ -19,6 +19,12 @@
       {
         "list": "off"
       }
+    ],
+    "axe/forms": [
+      "default",
+      {
+        "label": "off"
+      }
     ]
   }
 }
